# Metalprot_learning

./: .gitignore  LICENSE.txt  README.md  activate_env.sh  environment.yml  generate_cores.py  nohup.out  pyproject.toml  requirements.txt  run_jobs.py  run_prediction.py  subsets_experiment.ipynb
.github/workflows/: action.yml
Metalprot_learning/: __init__.py  core_generator.py  data.py  datasets.py  get_binding_cores.py  loader.py  models.py  predictor.py  processor.py  trainer.py  tune.py  utils.py
Metalprot_learning/core_generator/: __init__.py  core_creator.py  core_featurizer.py  core_generator.py  core_loader.py  core_noiser.py  core_permuter.py  featurizer.py  generator.py  loader.py  noiser.py  permuter.py
Metalprot_learning/train/: __init__.py  datasets.py  models.py  train.py  tune.py
Metalprot_learning/trainer/: __init__.py  datasets.py  model_trainer.py  models.py  trainer.py
doc/: Tips.md  count_chains.py  unpickle_examples.py  unpickle_examples_test.py
job_scripts/: activate_env.sh  compile_dataframes.py  generate_cores.py  optimize.py  predict.py  process.py  run_prediction.py  train.py  tune.py
job_scripts/train/: instantiate_models.py  train_models.py
regressor/: get_binding_cores.py
scripts/: generate_cores.py  generate_decoy.py  run_data_process.py  run_make_decoy_dist_mat.py  run_pkl_all.py  run_train.py
scripts/old/: run_make_dist_mat.py
src/: config.py
src/extractor/: generate_decoy_core.py  get_binding_cores.py  get_coordinating_residues.py  (+5 more)
test/: test_get_binding_cores.py  test_process.py
tests/: test_get_binding_cores.py
(+11 files in other folders)
